# assignments

./: .gitignore  README.md
ceia-amia/: README.md
ceia-amia/TP1/docs/: respuestas.md
ceia-amia/TP1/notebooks/: AMIA_2025_TP1.ipynb
ceia-amia/TP_FINAL/: README.md  pyproject.toml
ceia-amia/TP_FINAL/docs/: respuestas.md
ceia-amia/TP_FINAL/notebooks/: AMIA_2025_TP.ipynb  AMIA_2025_TP1.ipynb  README.md
ceia-iia/: README.md  TP_1_Hanoi_Tower.md
ceia-iia/TP1/: .gitignore  README.md  TP1_hanoi_tower_problem.ipynb  pyproject.toml  torre_de_hanoi.ipynb
ceia-iia/TP1/docs/: resolucion.md
ceia-iia/TP1/libs/aima/: hanoi_states.py  tree_hanoi.py
ceia-iia/TP1/notebooks/: README.md  hanoi_tower_problem.ipynb
ceia-iia/TP1/scripts/: README.md  hanoi_tower_problem.py  hanoy_tower_problem.py  run_hanoi.py
ceia-iia/TP1/src/: tower_hanoi_astar_solver.py  utils.py  validation.py
ceia-iia/TP1/src/core/: logger.py
ceia-iia/TP1_colab/: torre_de_hanoi.ipynb
ceia-iia/TP2/: README.md  california_housing_regression.ipynb  pyproject.toml
ceia-iia/TP2/docs/: TP2.md  enunciado.md  resolucion.md
ceia-iia/TP2/notebooks/: README.md  california_housing_regression.ipynb
ceia-iia/TP3/: README.md  pyproject.toml
ceia-iia/TP3/docs/: enunciado.md  resolucion.md
ceia-iia/TP3/notebooks/: README.md  spam_detection_solution.ipynb
ceia-peia/: README.md
