[project]
name = "tp3"
version = "0.1.0"
description = "Trabajo Pr치ctico 3 de Introducci칩n a la Inteligencia Artificial - Sistema de detecci칩n de SPAM utilizando procesamiento de lenguaje natural y aprendizaje autom치tico"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
